--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
-  <title>Document</title>
+  <title>ITech</title>
 </head>
 <body>
-  <div class="block">
-    <div class="box1">
-      al
-    </div>
-    
-    <div class="box2">
-      ba
-    </div>
-  </div>
+
+
+
+
+
+  <script src="js/main.js"></script>
+
 </body>
 </html>
