--- a/index.html
+++ b/index.html
@@ -8,11 +8,33 @@
   <title>ITech</title>
 </head>
 <body>
+  <!-- Start WRAPPER here -->
+  <div class="wrapper">
+    <!-- Start HEADER here -->
+    <header class="header">
+
+    </header>
+    <!-- End HEADER here -->
+    <!-- ***************************** -->
+
+    <!-- Start MAIN here -->
+    <main class="main">
 
 
+    </main>
+    <!-- End MAIN here -->
+    <!-- ***************************** -->
 
+    <!-- Start FOOTER here -->
+    <footer class="footer">
 
+    </footer>
+    <!-- End FOOTER here -->
+    <!-- ***************************** -->
 
+  </div>
+
+  <!-- JavaScript file here -->
   <script src="js/main.js"></script>
 
 </body>
